# mantis

./: BACKWARD_COMPATIBILITY.md  CHANGELOG.md  LICENSE  README.md  demo_univariate.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
data/GestureMidAirD1/: README.md  X_test.npy  X_train.npy  y_test.npy  y_train.npy
data/HandMovementDirection/: X_test.npy  X_train.npy  y_test.npy  y_train.npy
getting_started/: demo_univariate.py  intermediate_layers.ipynb  multichannel_adapters.ipynb  multichannel_extract_feats.ipynb  multichannel_fine_tune.ipynb  pretrain.py  self_ensembling.ipynb  single_channel_extract_feats.ipynb  single_channel_fine_tune.ipynb
mantis/: architecture.py
mantis/tokgen_utils/: __init__.py  convolution.py  encoders.py
mantis/vit_utils/: __init__.py  positional_encoding.py  transformer.py
mantis_trainer/: __init__.py  trainer.py
mantis_trainer/trainer_utils/: architecture.py  dataset.py  scheduling.py
src/mantis/: __init__.py
src/mantis/adapters/: __init__.py  diff_adapter.py  projector.py  var_selector.py
src/mantis/architecture/: __init__.py  architecture.py  version1.py  version2.py
src/mantis/architecture/tokgen_utils/: encoders.py
src/mantis/architecture/transformer_v1_utils/: transformer.py
src/mantis/architecture/transformer_v2_utils/: attention.py  rmsnorm.py  rope.py  swiglu.py  transformer.py
src/mantis/architecture/vit_utils/: positional_encoding.py
src/mantis/trainer/: __init__.py  trainer.py
src/mantis/trainer/trainer_utils/: augmentation.py  criterion.py  dataset.py
tests/: test_multichannel_extract_feats.py  test_multichannel_fine_tune.py  test_single_channel_extract_feats.py  test_single_channel_fine_tune.py
