[tool.poetry]
name = "mantis"
version = "0.1.0"
description = "A Foundation Model with Adapters for Multichannel Time Series Classification"
authors = [
    "Vasilii Feofanov <vasilii.feofanov@gmail.com>",
    "Songkang Wen <wensongkang@huawei.com>",
    "Romain Ilbert <romain.ilbert@hotmail.fr>",
    "Hongbo Guo <guohongbo4@huawei.com>",
    "Malik Tiomoko <malik.tiomoko@huawei.com>",
    "Lujia Pan <panlujia@huawei.com>",
    "Ievgen Redko <ievgen.redko@huawei.com>",
    "Jianfeng Zhang <zhangjianfeng3@huawei.com>",
]
maintainers = [
  "Vasilii Feofanov <vasilii.feofanov@gmail.com>",
]
license = "MIT"
readme = "README.md"
keywords = ["Time Series Foundation Model", "Classification", "Transformer"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
  
]

[tool.poetry.dependencies]
python = "^3.9"
einops = "^0.8"
huggingface-hub = "^0.23"
numpy = "^1.23"
pandas = "^1.5"
scikit-learn = "^1.2"
torch = ">=1.12"
tqdm = "^4.64"
safetensors = "^0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
